--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
 
         @media (max-width: 720px) {
+
             #banner {
                 padding-bottom: 20px;
             }
@@ -28,8 +29,6 @@
             background-color: #ec9f05 !important;
             font-weight: bold !important;
         }
-        #wrapper {
-        }
         #banner {
             background-image: url('img/bg.png');
             /* background-color: #2a2a72;
@@ -40,6 +39,9 @@
             background-repeat: no-repeat;
             background-size: cover;
             border-bottom-right-radius: 10%;
+        }
+        #experience .card {
+            border-color: transparent !important;
         }
         h1,
         .title {
@@ -57,7 +59,7 @@
             background-size: cover;
         }
         .white-filter {
-            background-color: rgba(255, 255, 255, 0.85);
+            background-color:white;
             position: absolute;
             width: 100%;
             height: 100%;
@@ -151,11 +153,72 @@
         </div>
     </div>
 
-    <!-- <div class="container" style="height:100vh">
-        <div class="row">
-            <div class="col"></div>
+    <div class="content-wrapper bg-content1 mb-5">
+        <div class="white-filter"></div>
+        <div class="container">
         </div>
-    </div> -->
+    </div>
+
+
+    <div class="container pb-5">
+        <div class="row">
+            <div class="col-lg-10 mx-auto text-white text-center" id="experience">
+                <h2 class="h1 font-weight-light mb-5">Professional Background / Education</h2>
+                <div class="card-deck text-centerr mb-sm-0 mb-lg-5">
+                    <div class="card bg-transparent">
+                        <div class="card-body">
+                            <h3 class="mb-0 h1"><i class="fas fa-user-tie"></i></h3>
+                            <h3 class="text-uppercase mb-0">Office of Hawaiian Affairs</h3>
+                            <h4 class="font-weight-light mb-0">Trustee-at-Large</h4>
+                            <h5 class="font-weight-light"><em>Garnered 164,000 votes in the 2016 election</em></h5>
+                        </div>
+                    </div>
+
+                    <div class="card bg-transparent">
+                        <div class="card-body">
+                            <h3 class="mb-0 h1"><i class="fas fa-user-tie"></i></h3>
+                            <h3 class="text-uppercase mb-0">Grassroot Institute of Hawaii</h3>
+                            <h4 class="font-weight-light mb-0">President/CEO</h4>
+                            <h5 class="font-weight-light"><em>A public policy research institution dedicated to the principles of individual liberty, free markets and limited, accountable government</em></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-deck text-center mb-sm-0 mb-lg-5">  
+                    <div class="card bg-transparent">
+                        <div class="card-body">
+                            <h3 class="mb-0 h1"><i class="fas fa-graduation-cap"></i></h3>
+                            <h3 class="text-uppercase mb-0">Involved in communities</h3>
+                            <h5 class="font-weight-light"> Aloha Heritage Center, Youth for Christ (President/CEO Emeritus), and  Tomorrow's Leaders (Founder and Past President)</h5>
+                        </div>
+                    </div>
+
+
+                    <div class="card bg-transparent">
+                        <div class="card-body">
+                            <h3 class="mb-0 h1"><i class="fas fa-user-tie"></i></h3>
+                            <h3 class="text-uppercase mb-0">Graduate of</h3>
+                            <h4 class="font-weight-light mb-0">Kamehameha Schools, Northwestern University (B.A.) and 
+                                University of Hawaii (M.A. and Ph.D.) </h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-deck text-center ">  
+                    <div class="card bg-transparent">
+                        <div class="card-body">
+                            <h3 class="mb-0 h1"><i class="fas fa-chalkboard"></i></h3>
+                            <h3 class="text-uppercase mb-0">Expert in East-West philosophy and ethics</h3>
+                            <h5 class="font-weight-light">Lectured at Universities in China and the United States and continues as an adjunct instructor at Hawaii Pacific University</h5>
+                        </div>
+                    </div>
+                </div>
+
+
+
+               
+
+            </div>
+        </div>
+    </div>
 
     <div class="content-wrapper bg-content1 mb-5">
         <div class="white-filter"></div>
@@ -166,7 +229,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 mt-5 pl-sm-0 pl-lg-5">
                     <h1 class="text-dark text-uppercase display-4">A Great Leader</h1>
-                    <h5 class="text-dark mb-5">
+                    <h5 class="text-dark mb-5 lead">
                         Keliʻi Akina, Ph.D., is a leader who is transforming Hawaii's economy, government and society.
                         He is known for the phrase he coined, "E Hana Kākou" - Let's work together! Over the past
                         several years as a public policy adviser at the legislative, congressional and international
@@ -185,7 +248,7 @@
             <div class="row content">
                 <div class="col-lg-6 col-md-12 col-sm-12 my-5 pr-sm-0 pr-lg-5">
                     <h1 class="text-dark text-uppercase display-4">A Native Hawaiian and Skilled Chanter</h1>
-                    <h5 class="text-dark">
+                    <h5 class="text-dark lead">
                         As a Native Hawaiian and skilled chanter, Dr. Akina has dedicated his life to the education and
                         financial advancement of both Hawaiians and all people in the islands, starting in the 1980's as
                         the director of Youth for Christ on the Wai`anae and Nanakuli coast. His plans for Hawaii's
@@ -203,7 +266,7 @@
 
     <!-- Footer -->
     <footer class="page-footer font-small blue bg-dark text-white">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row pl-3 pt-2">
                 <h6>Connect with Dr. Akina:</h6>
             </div>
